--- a/index.html
+++ b/index.html
@@ -189,8 +189,11 @@
 
 							<h3 align="left">Prototype</h3>
 
-							<p align="left">Blah blah blah</p>
-
+							<p align="left">The voice output can be changed to a wired headset, connecting to the Audio_HAT with the 3.5mm jack, while the voice input is via the microphone embedded on the Audio HAT.</p>
+							<p align="left">Our prototype is shown as below.</p>
+							<div align="center">
+								<img src="images/prototype.jpeg" alt="Prototype" style="max-width: 100%; height: auto;" />
+								<p><em>Figure: Prototype</em></p>
 
 
 						</div>
