--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
 
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/_AlcRoqS65E" frameborder="0" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/qPQIsXn6M1Q" frameborder="0" allowfullscreen></iframe>
 
 								<h2 class="alt">ColorSense</h2>
 								<p>Real-time portable color recognition helper</p>
@@ -192,7 +192,7 @@
 							<p align="left">The voice output can be changed to a wired headset, connecting to the Audio_HAT with the 3.5mm jack, while the voice input is via the microphone embedded on the Audio HAT.</p>
 							<p align="left">Our prototype is shown as below.</p>
 							<div align="center">
-								<img src="images/prototype.jpeg" alt="Prototype" style="max-width: 100%; height: auto;" />
+								<img src="images/prototype.jpeg" alt="Prototype" style="max-width: 70%; height: auto; transform: rotate(90deg);" />
 								<p><em>Figure: Prototype</em></p>
 
 
@@ -207,14 +207,14 @@
 								<h2>Results</h2>
 							</header>
 
-							<p align="left">ColorSense can successfully work on over 80 kinds of objects, and distinguish between colors that are easy to be confused like light yellow/green.</p>
+							<p align="left">ColorSense can successfully work on over 80 kinds of objects, and distinguish between colors that are easy to be confused like light yellow/green.The output will be an audio which tells the color of the object. However, due to the scope of camera and speech recognition issue, the response time varies greatly depending on the noise of the environment and it may also take a few attempts to work. </p>
 							<p align="left">Its performance highly dependent on a silent background of voice input due to limited budget for denoising module.</p>
 
 
 							<article class="item">
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/result.png" alt="" /></a>
 								<header>
-									<h3>Caption</h3>
+									<h3>Groupmate using the device</h3>
 								</header>
 							</article>
 
